// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Button] [ThemeType.Light] renders without crashing 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="btn"
>
  <View
    onLayout={[Function]}
    outlined={false}
    style={
      [
        {
          "backgroundColor": "black",
          "borderBottomColor": "black",
          "borderLeftColor": "black",
          "borderRightColor": "black",
          "borderTopColor": "black",
        },
        [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": 20,
            "borderBottomRightRadius": 20,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 10,
          },
          [
            undefined,
            false,
            undefined,
          ],
        ],
      ]
    }
    testID="button-container"
    type="primary"
  >
    <Text
      outlined={false}
      style={
        [
          {
            "color": "white",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
      type="primary"
    />
  </View>
</View>
`;

exports[`[Button] should render [ThemeType.Dark] without crashing 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="btn"
>
  <View
    onLayout={[Function]}
    outlined={false}
    style={
      [
        {
          "backgroundColor": "white",
          "borderBottomColor": "white",
          "borderLeftColor": "white",
          "borderRightColor": "white",
          "borderTopColor": "white",
        },
        [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": 20,
            "borderBottomRightRadius": 20,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 10,
          },
          [
            undefined,
            false,
            undefined,
          ],
        ],
      ]
    }
    testID="button-container"
    type="primary"
  >
    <Text
      outlined={false}
      style={
        [
          {
            "color": "black",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
      type="primary"
    />
  </View>
</View>
`;

exports[`[Button] should render [isDisabled] status without crashing 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="btn"
>
  <View
    onLayout={[Function]}
    outlined={false}
    style={
      [
        {
          "backgroundColor": "black",
          "borderBottomColor": "black",
          "borderLeftColor": "black",
          "borderRightColor": "black",
          "borderTopColor": "black",
        },
        [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": 20,
            "borderBottomRightRadius": 20,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 10,
          },
          [
            undefined,
            false,
            undefined,
          ],
        ],
      ]
    }
    testID="button-container"
    type="primary"
  >
    <Text
      outlined={false}
      style={
        [
          {
            "color": "white",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
      type="primary"
    />
  </View>
</View>
`;

exports[`[Button] should render [isLoading] status without crashing 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="btn"
>
  <View
    onLayout={[Function]}
    outlined={false}
    style={
      [
        {
          "backgroundColor": "black",
          "borderBottomColor": "black",
          "borderLeftColor": "black",
          "borderRightColor": "black",
          "borderTopColor": "black",
        },
        [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomLeftRadius": 20,
            "borderBottomRightRadius": 20,
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingBottom": 10,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 10,
          },
          [
            undefined,
            false,
            undefined,
          ],
        ],
      ]
    }
    testID="button-container"
    type="primary"
  >
    <Text
      outlined={false}
      style={
        [
          {
            "color": "white",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
      type="primary"
    />
  </View>
</View>
`;
